<resources>

    <string name="about_msg">\nChargeCap v1.2.2\n\nBuild 20201024.1</string>  <!-- Should be in sync with versionName in build.gradle:app -->

    <string name="app_name">ChargeCap</string>
    <string name="select_charge_limit">Charge limit</string>
    <string name="select_alert_tone">Alert tone</string>
    <string name="notification">Notification</string>
    <string name="start_battery_monitor">Start battery monitor</string>
    <string name="stop_battery_monitor">Stop battery monitor</string>
    <string name="about">About</string>
    <string name="stop_tone">Stop tone</string>
    <string name="increment_limit">Increment limit</string>
    <string name="decrement_limit">Decrement limit</string>
    <string name="start_monitoring">Start monitoring</string>
    <string name="stop_monitoring">Stop monitoring</string>

    <string name="pref_tone_uri">tone_uri</string>
    <string name="pref_limit">limit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="charge_limit">Charge limit</string>
    <string name="about_title">About ChargeCap</string>
    <string name="set_charge_limit_hint">Charge limit %</string>
    <string name="illegal_number">Illegal number</string>
    <string name="must_be_between_0_and_100">Must be between 0 and 100</string>

    <string name="current_percent_msg">%1$d%%</string>
    <string name="limit_msg">Limit: %1$d%%</string>
    <string name="battery_charge_reached_limit">Battery charge reached limit</string>
    <string name="disconnect_device_from_charger">Time to disconnect device from charger</string>

</resources>