<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--
    <item android:id="@+id/startBatteryMonitor"
        android:title="@string/start_battery_monitor"
        app:showAsAction="never" />

    <item android:id="@+id/stopBatteryMonitor"
        android:title="@string/stop_battery_monitor"
        app:showAsAction="never" />
-->

    <item android:id="@+id/selectChargeLimit"
        android:title="@string/select_charge_limit"
        app:showAsAction="never" />

    <item android:id="@+id/selectAlertTone"
        android:title="@string/select_alert_tone"
        android:visible="false"
        app:showAsAction="never" />

    <item android:id="@+id/notification"
        android:title="@string/notification"
        android:visible="false"
        tools:visible="true"
        app:showAsAction="never" />

    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>