<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/startMonitoringButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/start_monitoring"
        android:textColor="#555555"
        app:iconTint="#555555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/currentCharge"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.15"
        app:icon="@drawable/ic_baseline_play_circle_outline_24" />

    <Button
        android:id="@+id/stopMonitoringButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="#555555"
        app:iconTint="#555555"
        android:text="@string/stop_monitoring"
        app:layout_constraintStart_toStartOf="@id/startMonitoringButton"
        app:layout_constraintEnd_toEndOf="@id/startMonitoringButton"
        app:layout_constraintTop_toBottomOf="@id/startMonitoringButton"
        android:layout_marginTop="20dp"
        app:icon="@drawable/ic_baseline_pause_circle_outline_24" />


    <TextView
        android:id="@+id/currentCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        tools:ignore="SpUsage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="42%" />

    <TextView
        android:id="@+id/limitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:clickable="true"
        tools:ignore="SpUsage"
        app:layout_constraintTop_toBottomOf="@id/currentCharge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        tools:text="Limit: 80%" />

    <ImageView
        android:id="@+id/incrementLimit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
        android:scaleType="fitXY"
        android:contentDescription="@string/increment_limit"
        app:layout_constraintStart_toEndOf="@id/limitText"
        app:layout_constraintBottom_toBottomOf="@id/limitText"
        app:layout_constraintTop_toTopOf="@id/limitText"
        />
    <ImageView
        android:id="@+id/decrementLimit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
        android:scaleType="fitXY"
        android:contentDescription="@string/decrement_limit"
        app:layout_constraintEnd_toStartOf="@id/limitText"
        app:layout_constraintBottom_toBottomOf="@id/limitText"
        app:layout_constraintTop_toTopOf="@id/limitText"
        />

    <ImageView
        android:id="@+id/stopToneImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_baseline_notifications_off_24"
        android:contentDescription="@string/stop_tone"
        android:layout_marginBottom="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="430dp"
        android:visibility="gone"
        tools:visibility="visible"
         />

    <ImageView
        android:id="@+id/left1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="-10dp"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintEnd_toStartOf="@id/stopToneImage"
        app:layout_constraintBottom_toBottomOf="@id/stopToneImage"
        app:layout_constraintTop_toTopOf="@id/stopToneImage"
        android:visibility="invisible"
        tools:visibility="visible"
        />
    <ImageView
        android:id="@+id/left2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintEnd_toEndOf="@id/left1"
        app:layout_constraintBottom_toBottomOf="@id/stopToneImage"
        app:layout_constraintTop_toTopOf="@id/stopToneImage"
        android:visibility="invisible"
        tools:visibility="visible"
        />
    <ImageView
        android:id="@+id/left3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintEnd_toEndOf="@id/left2"
        app:layout_constraintBottom_toBottomOf="@id/stopToneImage"
        app:layout_constraintTop_toTopOf="@id/stopToneImage"
        android:visibility="invisible"
        tools:visibility="visible"
        />
    <ImageView
        android:id="@+id/left4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintEnd_toEndOf="@id/left3"
        app:layout_constraintBottom_toBottomOf="@id/stopToneImage"
        app:layout_constraintTop_toTopOf="@id/stopToneImage"
        android:visibility="invisible"
        tools:visibility="visible"
        />

    <ImageView
        android:id="@+id/right1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="-10dp"
        app:srcCompat="@drawable/ic_baseline_arrow_right_24"
        app:layout_constraintStart_toEndOf="@id/stopToneImage"
        app:layout_constraintBottom_toBottomOf="@id/stopToneImage"
        app:layout_constraintTop_toTopOf="@id/stopToneImage"
        android:visibility="invisible"
        tools:visibility="visible"
        />
    <ImageView
        android:id="@+id/right2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_arrow_right_24"
        app:layout_constraintStart_toStartOf="@id/right1"
        app:layout_constraintBottom_toBottomOf="@id/stopToneImage"
        app:layout_constraintTop_toTopOf="@id/stopToneImage"
        android:visibility="invisible"
        tools:visibility="visible"
        />
    <ImageView
        android:id="@+id/right3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_arrow_right_24"
        app:layout_constraintStart_toStartOf="@id/right2"
        app:layout_constraintBottom_toBottomOf="@id/stopToneImage"
        app:layout_constraintTop_toTopOf="@id/stopToneImage"
        android:visibility="invisible"
        tools:visibility="visible"
        />
    <ImageView
        android:id="@+id/right4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_arrow_right_24"
        app:layout_constraintStart_toStartOf="@id/right3"
        app:layout_constraintBottom_toBottomOf="@id/stopToneImage"
        app:layout_constraintTop_toTopOf="@id/stopToneImage"
        android:visibility="invisible"
        tools:visibility="visible"
        />


</androidx.constraintlayout.widget.ConstraintLayout>